[package]
name = "menu"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced =  { git = "https://github.com/hecrj/iced", rev = "90fee3a9237e71967eb0a63d8cef4f8ce1e5d2b5"} 





iced_aw = { path = "../..", default-features = false, features = ["menu"] }
