[package]
name = "menu"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev ="06517aa7e83b92f22795046bfd1f78402285d62f", features = ["tokio", "canvas"] }




iced_aw = { path = "../..", default-features = false, features = ["menu"] }
